k8s/base/jump/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jump
spec:
  selector:
    matchLabels:
      app: jump
  template:
    metadata:
      labels:
        app: jump
    spec:
      containers:
        - name: jump
          image: shokohsc/jump
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /api/health
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
