k8s/base/jump/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jump
  labels:
    app: jump
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: jump
